--- a/TI5.23/pricetracker/product/templates/productlist.html
+++ b/TI5.23/pricetracker/product/templates/productlist.html
@@ -26,11 +26,15 @@
             <div class="card-body">
                 <ul class="list-group">
                     {% for products in products %}
-                    <li class="list-group-item">
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
                         <a href="{% url 'historyprice' products.codprod %}" class="text-decoration-none">
                             {{ products.nameprod }}
                         </a>
-                    </li>
+                        <div>
+                            <a href="{% url 'editproduct' products.codprod %}" class="btn btn-warning btn-sm">Editar</a>
+                            <a href="{% url 'deleteproduct' products.codprod %}" class="btn btn-danger btn-sm" onclick="return confirm('Tem certeza que deseja excluir este produto, neguin?');">Excluir</a>
+                        </div>
+                    </li>                    
                     {% endfor %}
                 </ul>
             </div>
